<resources>
    <string name="app_name">Magical Methods</string>
    <string name="Welcome">"Welcome to Magical Methods!"</string>
    <string name="Hello">Login</string>
    <string name="Forget_Password">Forgot Password ?</string>
    <string name="btn_Login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_signup">"Not a member? Get registered to MagicalMethods now!"</string>
    <string name="clicking_register">"By clicking Register, I accept Magical Methods privacy policy"</string>
    <string name="btn_register">"Register"</string>
    <string name="btn_signin">"Already Registered. Login me!"</string>
    <string name="give_id">"Enter your registered Email-id below"</string>
    <string name="btn_reset">"Reset Password"</string>
    <string name="btn_back">"Back"</string>
    <string name="let_s_get_to_know_you">Let\'s get to know you</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="phone_no">Phone No:</string>
    <string name="start_course">Start Course</string>
    <string name="table_of_contents">Table of Contents(ToC) :</string>
    <string name="course_description">Course Description</string>
    <string name="error_msg">Error while loading data!</string>
    <string name="title_activity_payment_response_activity">PaymentResponseActivty</string>
    <string name="title_activity_course_details_new">CourseDetailsNew</string>
    <string name="buy_now">Buy Now</string>
    <string name="title_activity_purchased_courses">PurchasedCoursesActivity</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
</resources>
