<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:id="@+id/frg_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/let_s_get_to_know_you"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/etName"
        android:layout_toStartOf="@+id/etName"
        android:gravity="bottom"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textName"
        android:layout_toStartOf="@+id/etPhone"
        android:gravity="bottom"
        android:text="@string/city" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@+id/etPhone"
        android:layout_toEndOf="@+id/textCity"
        android:gravity="bottom"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textCity"
        android:layout_toStartOf="@+id/etPhone"
        android:gravity="bottom"
        android:text="@string/phone_no" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btnSubmit"
        android:layout_alignEnd="@+id/frg_textView"
        android:layout_marginBottom="35dp"
        android:gravity="bottom"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@+id/etCity"
        android:layout_toEndOf="@+id/textCity"
        android:gravity="bottom"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="@color/colorAccent"
        android:text="Submit" />

</RelativeLayout>
