<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/frg_imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="96dp"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/logo_transparent" />

        <TextView
            android:id="@+id/frg_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frg_imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16sp"
            android:text="@string/Forget_Password"
            android:textColor="@color/colorIcons"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frg_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frg_textView"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="48dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/give_id"
            android:textColor="@color/colorIcons"
            android:textSize="14sp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_email3"
            android:layout_below="@+id/frg_textView2"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

            <EditText
                android:id="@+id/frg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"

                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email3"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_reset"
            android:textColor="@color/colorIcons"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/btn_reset"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="29dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/colorPrimaryText"
            android:textColorLink="@color/colorPrimaryDark" />
    </RelativeLayout>
</ScrollView>